--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -1,8 +1,22 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.geometry.*?>
+<?import javafx.scene.effect.*?>
+<?import java.lang.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+
+<VBox alignment="center" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8"
+      fx:controller="ru.gekbrains.lesson4.Controller">
+    <children>
+        <TextArea fx:id="mainTextArea" VBox.vgrow="ALWAYS"/>
+        <HBox alignment="CENTER" >
+            <padding>
+                    <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+            </padding>
+            <TextField fx:id="mainTextField" HBox.hgrow="ALWAYS" onKeyPressed="#handleEnterPressed"/>
+            <Button text="Send" onAction="#btnOneClickAction"/>
+        </HBox>
+    </children>
+</VBox>
