--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -10,13 +10,18 @@
 <VBox alignment="center" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8"
       fx:controller="ru.gekbrains.lesson4.Controller">
     <children>
-        <TextArea fx:id="mainTextArea" VBox.vgrow="ALWAYS"/>
-        <HBox alignment="CENTER" >
+
+        <TextArea fx:id="mainTextArea" VBox.vgrow="ALWAYS">
+        <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+        </padding>
+        </TextArea>
+        <HBox alignment="CENTER" spacing="3.0">
             <padding>
-                    <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                <Insets bottom="3.0" left="3.0" right="3.0" top="3.0"/>
             </padding>
             <TextField fx:id="mainTextField" HBox.hgrow="ALWAYS" onKeyPressed="#handleEnterPressed"/>
-            <Button text="Send" onAction="#btnOneClickAction"/>
+            <Button fx:id="btnSend" text="Send" onAction="#btnOneClickAction"/>
         </HBox>
     </children>
 </VBox>
